tests/misc/fallback_test/expected/030_crash_extract_type.php.expected
src/030_crash_extract_type.php:3 PhanSyntaxError Cannot use empty array elements in arrays
